fix extra margin on fitstudy headers

--- a/src/css/fitStudy.css
+++ b/src/css/fitStudy.css
@@ -21,7 +21,7 @@
   font-weight: 900;
   line-height: 29px;
 
-  margin: auto var(--margin-lg) auto var(--margin-lg);
+  /* margin: auto var(--margin-lg) auto var(--margin-lg); */
 }
 
 .data-section-sub-header {
@@ -35,7 +35,7 @@
   font-style: italic;
   line-height: 22px;
 
-  margin: 2px var(--margin-lg) auto var(--margin-lg);
+  /* margin: 2px var(--margin-lg) auto var(--margin-lg); */
 }
 
 .data-section-paragraph {
@@ -44,7 +44,7 @@
 
   text-align: left;
 
-  margin: auto var(--margin-lg) auto var(--margin-lg);
+  /* margin: auto var(--margin-lg) auto var(--margin-lg); */
 }
 
 .data-section-paragraph ul {
@@ -90,9 +90,6 @@ li {
 .trainerBox h3 {
   color: #f0f9ff;
 }
-
-
-
 
 .workshop-p2 {
   text-align: left;
@@ -143,9 +140,9 @@ workshop-p2 > ol {
   flex-direction: column;
 }
 
-.top-space{
+.top-space {
   display: block;
-  margin:46px 0;
+  margin: 46px 0;
 }
 
 .image-text-right {
@@ -178,7 +175,7 @@ workshop-p2 > ol {
     margin: 4vw 0;
   }
 
-  .top-space{
+  .top-space {
     margin: 4vw 0;
   }
 
